# saas_data_analytics

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py  0002_datasets_metadata.py  __init__.py
app/: main.py
app/api/: deps.py
app/api/routes/: auth.py  datasets.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  dataset.py  dataset_column.py  organization.py  user.py
app/schemas/: dataset.py  user.py
app/services/: dataset_service.py  file_storage_service.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Button.tsx  Input.tsx
frontend/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/components/ui/: Button.tsx  Input.tsx
frontend/hooks/: useAuth.ts
frontend/store/: authStore.ts
frontend/types/: auth.ts
